2026-01-19  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve handling of various category combinations in over time report
	* Scroll to bottom when opening or updating ledger with ascending order enabled

2026-01-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow multiple categories with the same name, if in different parent categories

2026-01-09  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix value axis in categories comparison bar chart
	* Show negative values in pie charts (accounts comparison excluded)

2026-01-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add category division selection (subcategories, descriptions, payees/payers, or tags) to categories comparison chart

2026-01-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Save tags not used by any transaction

2026-01-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to convert one or multiple expenses or incomes to transfers (opens a dialog to select an account)

2026-01-02  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not update properties with default values if description or payee/payer has not been modified (and amount is zero), when editing existing transaction
	* Fix new tag on Wayland

2025-11-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Automatically increase number of decimals for currencies with exchange rate > €10

2025-10-19  Victor Nikiforov <victor.nike@gmail.com>

	* Add more crypto currencies

2025-10-17  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Clear selection or filter in transactions list with Escape key

2025-10-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix numerical and monetary formats in some cases on Windows

2025-09-10  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix compilation with MSYS/MinGW

2025-09-08  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when updating exchange rates while currency conversion dialog is open
